--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +8,16 @@
     <meta name="author" content="beregnloenefterskat.dk" />
     <meta property="og:image" content="/lovable-uploads/faviconberegnloen.png" />
     <link rel="icon" type="image/png" href="/lovable-uploads/faviconberegnloen.png" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLBZ29FQ9R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BLBZ29FQ9R');
+    </script>
   </head>
 
   <body>
