--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="description" content="Beregn din løn efter skat" />
     <meta name="author" content="beregnloenefterskat.dk" />
     <meta property="og:image" content="/lovable-uploads/faviconberegnloen.png" />
+    
+    <!-- Favicon tags -->
     <link rel="icon" type="image/png" href="/lovable-uploads/faviconberegnloen.png" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/faviconberegnloen.png" />
+    <link rel="shortcut icon" href="/lovable-uploads/faviconberegnloen.png" />
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLBZ29FQ9R"></script>
