favicon, metatext and title

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>beregnloenefterskat.dk</title>
-    <meta name="description" content="Beregn din løn efter skat" />
+    <title>Lønudregner - Få svar på, hvor meget du får udbetalt efter skat</title>
+    <meta name="description" content="Regn ud, hvor meget du får udbetalt. Indtast dine informationer og få et estimat af din månedlige nettoløn Bold(efter skat) og pension." />
     <meta name="author" content="beregnloenefterskat.dk" />
-    <meta property="og:image" content="/lovable-uploads/faviconberegnloen.png" />
+    <meta property="og:image" content="/favicon.ico" />
     
     <!-- Favicon tags -->
-    <link rel="icon" type="image/png" href="/lovable-uploads/faviconberegnloen.png" />
-    <link rel="apple-touch-icon" href="/lovable-uploads/faviconberegnloen.png" />
-    <link rel="shortcut icon" href="/lovable-uploads/faviconberegnloen.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLBZ29FQ9R"></script>
