--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lønudregner - Få svar på, hvor meget du får udbetalt efter skat</title>
-    <meta name="description" content="Regn ud, hvor meget du får udbetalt. Indtast dine informationer og få et estimat af din månedlige nettoløn Bold(efter skat) og pension." />
+    <meta name="description" content="Regn ud, hvor meget du får udbetalt. Indtast dine informationer og få et estimat af din månedlige nettoløn efter skat og pension." />
     <meta name="author" content="beregnloenefterskat.dk" />
     <meta property="og:image" content="/favicon.ico" />
     
