--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Lønudregner - Få svar på, hvor meget du får udbetalt efter skat</title>
     <meta name="description" content="Regn ud, hvor meget du får udbetalt. Indtast dine informationer og få et estimat af din månedlige nettoløn efter skat og pension." />
     <meta name="author" content="beregnloenefterskat.dk" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/og-image.png" />
     
     <!-- Favicon tags -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLBZ29FQ9R"></script>
@@ -26,7 +27,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
